deleted graph settings python file

--- a/example/exampe_workbook.ipynb
+++ b/example/exampe_workbook.ipynb
@@ -32,6 +32,18 @@
     "    plt.xticks(np.arange(0, x_max+1, 30))\n",
     "    plt.yticks(np.arange(0, y_max+1, 500))\n",
     "    \n",
+    "def set_graph_settings():\n",
+    "    mpl.rcParams['figure.figsize'] = (15,10)\n",
+    "    mpl.rcParams['figure.dpi'] = 600\n",
+    "    mpl.rcParams['lines.linewidth'] = 1\n",
+    "    mpl.rcParams['lines.markersize']  = 8 \n",
+    "    mpl.rcParams['axes.linewidth'] = 1.5\n",
+    "    mpl.rcParams['font.size'] = 22\n",
+    "    mpl.rcParams['xtick.major.size'] = 6\n",
+    "    mpl.rcParams['ytick.major.size'] = 6\n",
+    "    mpl.rcParams['xtick.major.width'] = 1.5\n",
+    "    mpl.rcParams['ytick.major.width'] = 1.5\n",
+    "    mpl.rcParams[\"errorbar.capsize\"] = 5\n",
     "    \n",
     "def add_ua_model_to_graph(substrates_to_add, dataframes):\n",
     "    \n",
@@ -83,7 +95,7 @@
     "substrate_symbols = {\"Ester\" : \"o\",\n",
     "                     \"Acid\" : \"s\",\n",
     "                     \"Aldehyde\" : \"^\",\n",
-    "                     \"Alcohol\" : \"v\"}\n"
+    "                     \"Alcohol\" : \"v\"}"
    ]
   },
   {
@@ -255,7 +267,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -303,7 +315,7 @@
     "model.append(reaction_classes.Esterase_r1())\n",
     "\n",
     "# Set model parameters for appended reactions\n",
-    "model.set_parameters_from_reactions()\n"
+    "model.set_parameters_from_reactions()"
    ]
   },
   {
@@ -518,7 +530,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -697,7 +709,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -712,7 +724,7 @@
     "substrates = [\"Ester\", \"Acid\"]\n",
     "for s in substrates:\n",
     "    display(Markdown(\"### -- \" + str(s) + \" --\"))\n",
-    "    display(ua.substrate_dataframes[s])\n"
+    "    display(ua.substrate_dataframes[s])"
    ]
   },
   {
@@ -879,7 +891,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -950,7 +962,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -962,7 +976,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -973,5 +987,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
