--- a/Engineering a seven enzyme biotransformation using mathematical modelling and characterized enzyme parts/Esterase_only.ipynb
+++ b/Engineering a seven enzyme biotransformation using mathematical modelling and characterized enzyme parts/Esterase_only.ipynb
@@ -7,7 +7,7 @@
     "colab_type": "text"
    },
    "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/googlecolab/colabtools/blob/master/notebooks/colab-github-demo.ipynb)"
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/willfinnigan/kinetics/blob/master/Engineering%20a%20seven%20enzyme%20biotransformation%20using%20mathematical%20modelling%20and%20characterized%20enzyme%20parts/Esterase_only.ipynb)"
    ]
   },
   {
