Renamed some plot functions

--- a/examples/Simple example.ipynb
+++ b/examples/Simple example.ipynb
@@ -16,8 +16,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 250.0,
-       "width": 390.0
+       "height": 250,
+       "width": 390
       }
      },
      "output_type": "display_data"
@@ -57,9 +57,7 @@
     "model.run_model()\n",
     "model.plot_substrate('A')\n",
     "model.plot_substrate('B')\n",
-    "model.plot_substrate('C')\n",
-    "plt.savefig(simple_example1.png, dpi=300)\n",
-    "plt.show()\n",
+    "model.plot_substrate('C', plot=True)\n",
     "\n",
     "# Now try altering the enzyme concentration, km or kcat, and re-running the model to see the effects this has...."
    ]
@@ -69,9 +67,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    ""
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -83,16 +79,16 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3.0
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
